--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config index.js",
+    "docker": "NODE_ENV=production node index.js",
     "dev": "nodemon -r dotenv/config --inspect index.js",
     "build": "docker build -t bakoushin/poh-delegate .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
     "ethers": "5.5.1",
