--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "2.8.5",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
     "ethers": "5.5.1",
