Add wrong chain id warning

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # Port the service will be running on
 PORT=3000
 
+# Chain id to work with. Optional
+# If provided, UI will check chain id matching after connecting a wallet
+# As an example we provide id for Rinkeby testnet
+CHAIN_ID=4
+
 # Address of the CoreEvidence smart contract
 # As an example we are using one deployed on the Rinkeby testnet
 # https://rinkeby.etherscan.io/address/0x167C004C2cbee4dAA5e40AE5f234b88dEAB86239
